--- a/gb/20/2/27/n11900396.md
+++ b/gb/20/2/27/n11900396.md
@@ -1,23 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qpntud264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qpntud264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qpntud264/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qpntud264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qpntud264/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qpntud264/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qpntud264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>订婚钻戒秒消失 狗狗一脸心虚 不妙！在它肚子里？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/70faad82a656ae828e3700a631c2df4e-600x400.jpg" />
-<h6>狗狗吞了订婚钻戒吗？（示意图）（<a target="_blank" href="https://zh.wikipedia.org/wiki/File:Rose_Gold_Diamond_Engagement_Ring.jpg"target="_blank"> Petragems, Wikimedia commons 
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2020年02月27日讯】（大纪元记者嫣华综合报导）在<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E5%8D%97%E9%9D%9E%E6%99%AE%E5%8B%92%E6%89%98%E5%88%A9%E4%BA%9A.md#1">南非普勒托利亚</a>(Pretoria)一家<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E5%85%BD%E5%8C%BB%E8%AF%8A%E6%89%80.md#1">兽医诊所</a>诊治了一个特别的病患，小狗佩珀（Pepper）被主人送到这里，检查主人的订婚戒指有没有在它的肚子里？</p>
-<p>据狗狗主人介绍；她才刚把<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E8%AE%A2%E5%A9%9A%E9%92%BB%E6%88%92.md#1">订婚钻戒</a>放到餐桌上，然后转身去做一点事情；才一会儿功夫，当她走回餐桌来想拿回<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E9%92%BB%E6%88%92.md#1">钻戒</a>时，没想到，钻戒竟然不见了。</p>
-<figure id="attachment_11900445" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/3bef61a921d2c2847850c39238591343.jpg"><img class="size-large wp-image-11900445" src="https://i.epochtimes.com/assets/uploads/2020/02/3bef61a921d2c2847850c39238591343-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E8%AE%A2%E5%A9%9A%E9%92%BB%E6%88%92.md#1">订婚钻戒</a>。（示意图）（<ahref="https://zh.wikipedia.org/wiki/File:Rose_Gold_Diamond_Engagement_Ring.jpg">Petragems, Wikimedia commons</a>）</figcaption></figure>
-<p>她着急地寻找家中的每一个角落，但怎么找都找不到；就在她慌张混乱之际，眼光余角一撇看见狗狗佩珀（Pepper）一脸心虚地坐在角落，她突然心里一震：“不妙！难道佩珀把<ahref="https://github.com/qpntud264/djy/blob/master/gb/tag/%E9%92%BB%E6%88%92.md#1">钻戒</a>吞进了肚子里？”</p>
+	<p>【大纪元2020年02月27日讯】（大纪元记者嫣华综合报导）在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%97%E9%9D%9E%E6%99%AE%E5%8B%92%E6%89%98%E5%88%A9%E4%BA%9A.md#1">南非普勒托利亚</a>(Pretoria)一家<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%BD%E5%8C%BB%E8%AF%8A%E6%89%80.md#1">兽医诊所</a>诊治了一个特别的病患，小狗佩珀（Pepper）被主人送到这里，检查主人的订婚戒指有没有在它的肚子里？</p>
+<p>据狗狗主人介绍；她才刚把<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AE%A2%E5%A9%9A%E9%92%BB%E6%88%92.md#1">订婚钻戒</a>放到餐桌上，然后转身去做一点事情；才一会儿功夫，当她走回餐桌来想拿回<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%92%BB%E6%88%92.md#1">钻戒</a>时，没想到，钻戒竟然不见了。</p>
+<figure id="attachment_11900445" aria-describedby="caption-attachment-11900445" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/3bef61a921d2c2847850c39238591343.jpg"><img class="size-large wp-image-11900445" src="https://i.epochtimes.com/assets/uploads/2020/02/3bef61a921d2c2847850c39238591343-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11900445" class="wp-caption-text"><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AE%A2%E5%A9%9A%E9%92%BB%E6%88%92.md#1">订婚钻戒</a>。（示意图）<ahref="https://zh.wikipedia.org/wiki/File:Rose_Gold_Diamond_Engagement_Ring.jpg">Petragems, Wikimedia commons</a>）</figcaption></figure>
+<p>她着急地寻找家中的每一个角落，但怎么找都找不到；就在她慌张混乱之际，眼光余角一撇看见狗狗佩珀（Pepper）一脸心虚地坐在角落，她突然心里一震：“不妙！难道佩珀把<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%92%BB%E6%88%92.md#1">钻戒</a>吞进了肚子里？”</p>
 <p>为了查证它到底有没有吞了钻戒，主人只好把佩珀带到附近的动物医院检查，当她把事情原委告之医护人员后，他们马上帮佩珀拍摄X光检查。当X光出来时，出现了惊人的一幕：大家都很清楚的看到钻戒真的在狗狗的肚子里！</p>
 <p>谷农场动物医院（Valley Farm Animal Hospital）在他们的脸书（Facebook）页面上分享了这个有趣的事件，帖子上有狗狗Pepper的照片和X射线拍出来的它的胃，胃中清晰可见有一个戒指的痕迹在那儿。</p>
-<p><center><a style="border: none; overflow: hidden;" src=></a><img width="600" src="https://raw.githubusercontent.com/qpntud264/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/qpntud264/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fvfah.info%2Fposts%2F2787280271331788&amp;width=500&amp;show_text=false&amp;height=792&amp;appId" width="500" b="792" frameborder="0" scrolling="no"></a></center>上面写着：“我叫佩珀（Pepper）。我看起来会让你觉得很恶心吗？”“那是因为兽医师喂了我吃了一些让我呕吐的东西！喔～不是说兽医师是坏人啦！那是因为我吃了主人的订婚戒指！”</p>
+<p>上面写着：“我叫佩珀（Pepper）。我看起来会让你觉得很恶心吗？”“那是因为兽医师喂了我吃了一些让我呕吐的东西！喔～不是说兽医师是坏人啦！那是因为我吃了主人的订婚戒指！”</p>
 <p>为了减少对小狗佩珀Pepper的伤害，医师建议不用开刀，改用催吐药；幸好，这招管用，它真的把戒指吐出来了，但是它为什么会去吞食戒指呢？</p>
 <p>兽医师似乎知道好奇的网友会这么提问，因此帖子上幽默的补充了一句： “别问了！在当时这看来似乎是个好主意！”</p>
-<figure id="attachment_11900451" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/60da67893109e29bb5d766e86cbb7bae.jpg"><img class="size-large wp-image-11900451" src="https://i.epochtimes.com/assets/uploads/2020/02/60da67893109e29bb5d766e86cbb7bae-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">戴上订婚戒指的手。（示意图）（Pexels）</figcaption></figure>
+<figure id="attachment_11900451" aria-describedby="caption-attachment-11900451" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/60da67893109e29bb5d766e86cbb7bae.jpg"><img class="size-large wp-image-11900451" src="https://i.epochtimes.com/assets/uploads/2020/02/60da67893109e29bb5d766e86cbb7bae-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-11900451" class="wp-caption-text">戴上订婚戒指的手。（示意图）（Pexels）</figcaption></figure>
 <p>后来专家补充说，建议养狗狗的主人，不管是大狗或小狗，虽然它们有时候看起来很聪明；不过它们就像小宝宝一样，可能看到亮晶晶、很漂亮、很吸引人的钻戒，基于好奇想要玩一玩，结果不小心就把它吞下肚了；这不仅让主人损失惨重，也可能会要了狗狗的命。</p>
-<figure id="attachment_11900456" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/62aa7eee0f0fea727803e8d67934545a.jpg"><img class="size-large wp-image-11900456" src="https://i.epochtimes.com/assets/uploads/2020/02/62aa7eee0f0fea727803e8d67934545a-600x900.jpg" alt="" width="600" b="900" /></a><figcaption class="wp-caption-text">一脸无辜的狗狗。（示意图）（<ahref="https://www.flickr.com/photos/rexness/7176103109">Rexness, Flickr</a>）</figcaption></figure>
 <p>自发布以来，该帖子已被分享将近5千次；而且引起网友的共鸣，网友留言超过3千则。很多网友对狗狗安全的让钻戒离开它的肚子感到高兴，也有一些网友分享了他们的宠物也经历过类似的情况。</p>
 <p>“我不应该笑这只甜美的小狗……但是，我很抱歉！”、“很高兴妈妈把她的戒指拿回来，而且这意外没有让你生病。”、“我的可卡犬抓住了我的订婚戒指，不过我很幸运，及时从它那儿拿回戒指！”、“我有一只猫吃了我藏起来的珠宝！”</p>
 <p>责任编辑：茉莉</p>
@@ -26,48 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/18/9/28/n10747830.md#1">扶轮之子团聚  员林扶轮社温馨洋溢</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/18/10/11/n10776369.md#1">鹿港东区扶轮社传爱 扶轮之子受惠</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/18/10/25/n10807704.md#1">助植物人  百合扶轮社双11办慈善义卖</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11954340.md#1">加强防疫 花莲县府禁止公务员出国</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11953873.md#1">Dyson送空气清净机  林右昌：妥善用于防疫</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11953633.md#1">宜县阅读力表现佳 首获整体阅读力跃升城市</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11953638.md#1">食农教育向下扎根 冬山河生态绿舟插秧去</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949649.md#1">中共肺炎疫情延烧 太鲁阁十处服务据点租金减半</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949576.md#1">花莲清明节返乡专车 23日开放订票</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949373.md#1">宜县铁路高架可行性报告 获台铁局认同</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/2/n11561797.md#1">再获大奖《归途》获纽约电影节最佳故事片奖</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/14/n11586978.md#1">《归途》温哥华公映 人性之美感动观众</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/10/28/n11616926.md#1">《归途》旧金山湾区首映　   观众称赞真实感人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/12/n11717070.md#1">《归途》入围多国电影节 各大洲专业人士赞赏</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9921539.md#1" target="_blank">尹曙生：产粮大省为何饿死人</a></li><li><a href="https://github.com/qpntud264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/26/n3738443.md#1" target="_blank">云帆：一水之隔　云泥之别</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11955220.md#1">【新闻看点】习谈“疫情反弹风险”川普再斥中共</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11954319.md#1">【直播回放】3.19疫情追踪：法国政坛遭重创</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/19/n11954613.md#1">【直播回放】3.19美国政府每日疫情发布会</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11947422.md#1">【四维健康】感染中共肺炎有3种反应 哪种最严重？</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/18/1/20/n10073708.md#1">芋头是“天然养颜食物” 还能抗癌解毒</a></li>
-<li><a href="https://github.com/qpntud264/djy/blob/master/gb/20/3/17/n11947465.md#1">【抗疫家务通】这5类食物 进微波炉可能伤人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qpntud264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qpntud264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/27/n11900396.htm">订婚钻戒秒消失 狗狗一脸心虚 不妙！在它肚子里？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/27/n11900396.htm">订婚钻戒秒消失 狗狗一脸心虚 不妙！在它肚子里？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qpntud264/djy/blob/master/gb/20/2/27/n11900396.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qpntud264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qpntud264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qpntud264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qpntud264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qpntud264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/2/27/n11900396.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
